<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewPassword"
    android:layout_margin="24dp"
    >
    <TextView
        android:id="@+id/create_new_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:lineHeight="38sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/create_new_pass_text"
        android:textAppearance="@style/hello_login"
        android:textSize="34sp"
        android:translationY="-1.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_pass_desc"
        android:textAppearance="@style/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_pass_text" />
    <EditText
        android:id="@+id/enteredNewPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_form"
        android:ems="10"
        android:hint="@string/new_pass_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <EditText
        android:id="@+id/enteredNewPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_form"
        android:ems="10"
        android:hint="@string/new_pass_confirm"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredNewPassword" />
    <Button
        android:id="@+id/reseat_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/primary_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/reseat_pass_btn"
        android:textSize="16dp"
        android:onClick="passToVerifiedSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredNewPasswordConfirm"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>