<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".users.clientactivities.ClientHomeSubmitRequestActivity">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeX"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"

            >


            <include
                android:id="@+id/action_btns"
                layout="@layout/action_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sub_form_text"
                android:textAppearance="@style/hello_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/action_btns" />

            <TextView
                android:id="@+id/welcomeClientText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fill_Infos"
                android:textAppearance="@style/or_login_wi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_text" />

            <LinearLayout
                android:id="@+id/layout_ca_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeClientText">


                <EditText
                    android:id="@+id/enteredCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:ems="10"
                    android:hint="@string/company_sub"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <EditText
                    android:id="@+id/enteredAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:ems="10"
                    android:hint="@string/address_sub"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />


            </LinearLayout>

            <EditText
                android:id="@+id/enteredPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_form"
                android:ems="10"
                android:hint="@string/phone_sub_ex"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_ca_sub" />

            <EditText
                android:id="@+id/enteredActivityType"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_form"
                android:ems="10"
                android:hint="@string/activity_type_sub"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enteredPhoneNumber" />

            <LinearLayout
                android:id="@+id/layout_dn_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enteredActivityType">

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="248dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:ems="10"
                    android:hint="@string/Date_sub_ex"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/enteredNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_form"
                    android:ems="10"
                    android:hint="@string/nationality_sub"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/enteredNumId"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_form"
                android:ems="10"
                android:hint="@string/nat_id_sub_ex"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_dn_sub" />

            <LinearLayout
                android:id="@+id/layout_ver_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enteredNumId">

                <CheckBox
                    android:id="@+id/verifiedBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/valid_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/verify_txt"
                    android:textAppearance="@style/or_login_wi"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/term_condition_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleCn"
                    android:text="@string/term_condition_txt"
                    android:textAppearance="@style/or_login_wi"
                    android:textColor="@color/secondary"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_request_form_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/primary_button"
                android:onClick="submitRequestHandler"
                android:text="@string/submit_button"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_ver_sub" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>