<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".SignUpActivity"
    >

    <TextView
        android:id="@+id/hello_regis"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:lineHeight="38sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/hello_regis"
        android:textAppearance="@style/hello_login"
        android:textSize="34sp"
        android:translationY="-1.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_regis">


        <EditText
            android:id="@+id/enteredFirstname"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_form"
            android:ems="10"
            android:hint="@string/firstname_regis"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <EditText
            android:id="@+id/enteredLastname"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_form"
            android:ems="10"
            android:hint="@string/lastname_regis"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


    </LinearLayout>

    <EditText
        android:id="@+id/enteredEmailRegis"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_form"
        android:ems="10"
        android:hint="@string/email_regis"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_fl" />

    <EditText
        android:id="@+id/enteredPasswordRegis"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_form"
        android:ems="10"
        android:hint="@string/password_regis"
        android:inputType="textPassword"

        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredEmailRegis" />

    <Button
        android:id="@+id/registre_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/primary_button"
        android:onClick="signupHandler"
        android:text="@string/registre_btn"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredPasswordRegis" />

    <LinearLayout
        android:id="@+id/linearLayout34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registre_btn">

        <View
            android:id="@+id/line1"
            android:layout_width="5dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#E8ECF4" />

        <TextView
            android:id="@+id/or_regis_wi"
            style="@style/or_login_wi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="top"
            android:text="@string/or_regis_wi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLog" />

        <View
            android:id="@+id/line2"
            android:layout_width="5dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#E8ECF4" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/secondary_button"
        android:contentDescription="@string/google_sign_in_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:src="@drawable/ic_google_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout34"
        app:layout_constraintVertical_bias="0.225" />

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/don_t_have_"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="-2sp"
            android:paddingEnd="8dp"
            android:text="@string/have_"
            android:textAppearance="@style/don_t_have_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleSignInButton"
            app:layout_constraintVertical_bias="0.728" />

        <TextView
            android:id="@+id/registre"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="-2sp"
            android:onClick="goToLogin"
            android:text="@string/login_"
            android:textAppearance="@style/registre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/don_t_have_"
            app:layout_constraintTop_toBottomOf="@+id/googleSignInButton"
            app:layout_constraintVertical_bias="0.728"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>